--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,8 +68,7 @@ h4 {
 
 .clubs {
   font-size: 2em;
-  line-height: 1.4em;
-  padding: 0.1em;
+  line-height: inherit;
 }
 
 img {
@@ -234,7 +233,13 @@ form label, form textarea {
     font-family: inherit;
     font-size: inherit;
 }
-
+form input, form textarea {
+  background: none;
+  border-style: solid;
+  border-color: #FFFFFF #FFFFFF #00FA9A #FFFFFF;
+  font-family: Nasa;
+    font-size: inherit;
+}
 
 div#content form {
     margin-left: 2em;
@@ -248,7 +253,7 @@ div#content input {
 .button {
   text-decoration: none;
     margin: 0 0.5em;
-    font-size: 1.5em;
+    font-size: 1.8em;
 }
 
 .button:hover {
@@ -500,7 +505,7 @@ a[lang=fr] + a[lang=en]:before {
 }
 
 li[data-type=Book] {
-   font-family: orator-std, monospace;
+   font-family: Nasa, sans-serif;
 }
 
 
@@ -619,21 +624,6 @@ li[data-type=Book] {
     display: block;
 }
 
-.pad-28_spencer-holst_charabia-francais_frmd #content p,
-.pad-04_alexis-guillier_artless_frmd #content p,
-.pad-07_ryan-gander_lax_frmd #content p {
-    text-indent: 0em;
-}
-
-.pad-15_david_antin_parler_aux_frontieres_frmd #content p {
-    white-space: pre-wrap;
-    text-align: center;
-}
-.pad-21b_david-antin_silence-noisemd #content p {
-    white-space: pre-wrap;
-    text-indent: 0em;
-}
-
 
 .pad-stylecss #content {
     white-space: pre-wrap;
@@ -664,5 +654,3 @@ li[data-type=Book] {
     width: 100%;
     margin: 0;
 }
-
-
